# gpt-oss-client

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: USER_GUIDE.md  USER_GUIDE_EN.md
src/gpt_oss_client/: __init__.py  cli.py  client.py  providers.py  schema.py  server.py
src/gpt_oss_client/adapters/: ollama.py  openai_compat.py
src/gpt_oss_client/harmony/: __init__.py  parser.py
