[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-oss-client"
version = "0.2.0"
description = "Клиент для GPT-OSS 20B (Ollama, LM Studio/OpenAI-совместимые, Harmony parsing, REST-server)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Maxx", email = "dev@example.com" }]
keywords = ["LLM", "GPT-OSS", "client", "Ollama", "OpenAI-compatible", "LM Studio", "vLLM", "FastAPI"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "httpx>=0.27.2",
  "pydantic>=2.8.2",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "anyio>=4.4.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
local = [
  "transformers>=4.43.0",
  "torch>=2.3.0",
]

[project.scripts]
gptoss = "gpt_oss_client.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
